tests/compile_fail/endpoint_authorize_none_scopes.stderr
error: Cannot use #[a3_authorize(scopes = [...])] with #[a3_security(none)]. Use #[a3_security(jwt)] for scope-protected endpoints.
 --> $WORKSPACE/tests/compile_fail/endpoint_authorize_none_scopes.rs
  |
  | async fn test_handler(_ctx: A3Context) -> A3Result<Json<serde_json::Value>, Never> {
  |          ^^^^^^^^^^^^
